syntax = "proto3";

option csharp_namespace = "phoenix";
option go_package = "./models";

package phoenix;

message GetGroupSecretAndCountryCodeRequest{
  int32 groupId = 1;
}

message GetGroupSecretAndCountryCodeResponse{
  bool isSuccess = 1;
  string secretCode = 2;
  string countryCode = 3;
}

message GetCDVRAdapterRequest{
  int32 groupId = 1;
}

message GetCDVRAdapterResponse{
    int32 id = 1;
    string adapterUrl = 2;
    bool DynamicLinksSupport = 3;
    string SharedSecret = 4;
    string ExternalIdentifier = 5;
}